@@ -5,7 +5,6 @@ import com.escuelagaing.edu.co.model.Player;
 import com.escuelagaing.edu.co.model.RoomStatus;
 import com.escuelagaing.edu.co.model.Dealer;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RoomStateDTO {
 
@@ -22,12 +21,13 @@ public class RoomStateDTO {
         this.status = (status != null) ? status.name() : "DESCONOCIDO";
         this.maxPlayers = maxPlayers;
         this.currentPlayers = (players != null) ? players.size() : 0;
-        this.players = (players != null) ? players.stream().map(PlayerStateDTO::new).collect(Collectors.toList()) : List.of();
+        this.players = (players != null) ? players.stream().map(PlayerStateDTO::new).toList() : List.of();
         this.winners = (winners != null) 
-            ? winners.stream().map(player -> player instanceof Dealer ? "Dealer" : player.getUser().getNickName()).collect(Collectors.toList())
+            ? winners.stream().map(player -> player instanceof Dealer ? "Dealer" : player.getUser().getNickName()).toList()
             : List.of();
         this.dealerHand = (dealerHand != null) ? dealerHand : List.of();
     }
+    
 
     public String getRoomId() {
         return roomId;
